# final-proje

./: LICENSE  README.md
1. Building a Blockchain/: Cargo.toml  README1.md
1. Building a Blockchain/src 1/: main.rs
1. Building a blockchain/: Cargo.toml  README.md
1. Building a blockchain/src 1/: main.rs
2. Simulating a substrate network/: Cargo.toml  README.md
2. Simulating a substrate network/src 1/: main.rs
2. substrate_simulator/: Cargo.toml  README2.md
2. substrate_simulator/src/: main.rs
3. Adding trusted nodes to a network/: Cargo.toml  README.md  README3.md
3. Adding trusted nodes to a network/src 3/: main.rs
8. Smart contracts/: Cargo.toml  README.md
8. Smart contracts/src 1/: main.rs
8. Smart contracts/src 4/: main.rs
