[package]
name = "substrate-node-network"
version = "0.1.0"
edition = "2018"

[dependencies]

[dependencies.substrate]
version = "0.1.0" 

[dependencies.node-template-runtime]
git = "https://github.com/substrate-developer-hub/substrate-node-template.git"
tag = "v3.0.0" 

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
